Repaired font size so it doesn't overflow

--- a/src/components/day/day.styles.css
+++ b/src/components/day/day.styles.css
@@ -5,6 +5,7 @@
 .day-dayNight {
 	display: flex;
 	justify-content: space-between;
+	font-size: 20px;
 }
 
 .day-day {
